pihole/svc-pihole-tcp.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-tcp
  namespace: pihole
spec:
  externalTrafficPolicy: Local
  ports:
  - name: pihole-http
    port: 30007
    protocol: TCP
    targetPort: pihole-http
  selector:
    app: pihole
  sessionAffinity: None
  type: LoadBalancer
