pihole/svc-pihole-udp.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-udp
  namespace: pihole
spec:
  externalTrafficPolicy: Local
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: dns-udp
  - name: client-udp
    port: 67
    protocol: UDP
    targetPort: client-udp
  selector:
    app: pihole
  sessionAffinity: None
  type: LoadBalancer
